[package]
name = "shellaliyun"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "gzip", "stream", "multipart", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rustyline = "14"
shlex = "1"
colored = "2"
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
url = "2"
open = "5"

clap = { version = "4.0", features = ["derive"] }
dirs = "4.0"
which = "4.2.2"
futures = "0.3"
indicatif = "0.17"
